# nullgate

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  install.sh
android/app/: build.gradle.kts
android/app/src/main/java/io/github/steeb_k/nullgate/: MainActivity.kt
android/app/src/main/java/io/github/steeb_k/nullgate/engine/: EngineHolder.kt  NetworkMonitor.kt  NullgateVpnService.kt
android/app/src/main/java/io/github/steeb_k/nullgate/ui/: AppScreen.kt  Dialogs.kt  RelaysDialog.kt
crates/ipn-cli/: Cargo.toml
crates/ipn-cli/src/: main.rs
crates/ipn-core/: Cargo.toml
crates/ipn-core/examples/: relay_probe.rs
crates/ipn-core/src/: admission.rs  conntrack.rs  engine.rs  geo.rs  lib.rs  network.rs  node.rs  presence.rs  relays.rs  roster.rs  router.rs  secrets.rs  tun_device.rs
crates/ipn-core/tests/: delete_e2e.rs  engine_e2e.rs  geo_e2e.rs  join_denied_e2e.rs  membership_docs.rs  originator_key_e2e.rs  protocol_version_e2e.rs  relay_e2e.rs  rotate_e2e.rs
crates/ipn-daemon/: Cargo.toml
crates/ipn-daemon/src/: logging.rs  main.rs  power.rs  service.rs  watchdog.rs
crates/ipn-daemon/src/power/: macos.rs
crates/ipn-gui/: Cargo.toml  build.rs
crates/ipn-gui/src/: actions.rs  agent.rs  main.rs  notify.rs  service_ctl.rs  style.css  tray.rs  windows.css
crates/ipn-ipc/: Cargo.toml
crates/ipn-ipc/src/: lib.rs  transport.rs
crates/ipn-mobile/src/: lib.rs
docs/: README.md  android-packaging.md  architecture.md  building.md  development.md  linux-packaging.md  macos-packaging.md  releasing.md  security.md  windows-packaging.md
img/: icon-draft.xcf  icon-spin.xcf  icon-tray.xcf  nullgate-header.xcf  tray-icon-splash.xcf
img/old/: icon-spin.xcf  icon-stacked.xcf
packaging/linux/: INSTALL.txt  io.github.steeb_k.Nullgate.desktop  ipnctl  nullgate-daemon.service  nullgate-update.service  nullgate-update.timer  nullgatectl
packaging/macos/: INSTALL.txt  Info.plist  io.github.steeb_k.IPN.daemon.plist  io.github.steeb_k.IPN.gui.plist  io.github.steeb_k.IPN.update.plist  io.github.steeb_k.Nullgate.daemon.plist  io.github.steeb_k.Nullgate.gui.plist  io.github.steeb_k.Nullgate.update.plist  ipnctl  nullgatectl
packaging/windows/: ipn-update.ps1  nullgate-update.ps1
scripts/: build-arm64.ps1  build-msi.ps1  bundle-gtk-macos.sh  bundle-gtk-windows.ps1  fetch-gtk-msys2.ps1  package-linux.sh  package-macos.sh  setup-conda-macos.sh  sign-artifacts.ps1  verify-bundle.ps1
wix/: ipn.wxs  nullgate.wxs
