[package]
name = "ipn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core engine for Nullgate: P2P virtual LAN over iroh."

[dependencies]
# iroh P2P stack
iroh.workspace = true
iroh-blobs.workspace = true
iroh-gossip.workspace = true
iroh-docs.workspace = true
iroh-tickets.workspace = true
iroh-mdns-address-lookup.workspace = true

# async
tokio.workspace = true
futures-lite.workspace = true
bytes.workspace = true
# Lock-free reads for the path selector's preferred-relay set: it is consulted
# on the send path, where a blocking std RwLock write would park a tokio worker.
arc-swap.workspace = true

# serialization
serde.workspace = true
serde_bytes.workspace = true
ciborium.workspace = true
data-encoding.workspace = true

# crypto
ed25519-dalek.workspace = true
blake3.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
rand.workspace = true

# platform / fs
hostname.workspace = true
# TUN: tun-rs on desktop (DeviceBuilder) and on Android (AsyncDevice::from_fd over
# the VpnService fd) — same async substrate, so it stays a common dependency.
tun-rs.workspace = true

# diagnostics
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Desktop-only: the OS keystore has no Android backend (secrets fall back to a
# file in app-private storage there), and the originator-only geolocation stack
# (MMDB read + HTTP download) is not shipped on mobile.
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring.workspace = true
maxminddb.workspace = true
serde_json.workspace = true
rust_iso3166.workspace = true
ureq.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
# Dev-only iroh features: examples/relay_probe.rs reads the endpoint's
# net-report to verify a custom relay's QUIC address-discovery endpoint, and
# the relay e2e test spins up an in-process relay server (test-utils).
iroh = { workspace = true, features = ["unstable-net-report", "test-utils"] }
