[package]
name = "ipn-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Privileged Nullgate daemon: owns the iroh node + TUN, serves the GUI over IPC."

[[bin]]
name = "nullgate-daemon"
path = "src/main.rs"

[dependencies]
ipn-core = { path = "../ipn-core" }
ipn-ipc = { path = "../ipn-ipc", features = ["transport"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories.workspace = true
clap.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service.workspace = true
