[package]
name = "ipn-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Privileged Nullgate daemon: owns the iroh node + TUN, serves the GUI over IPC."

[[bin]]
name = "nullgate-daemon"
path = "src/main.rs"

[dependencies]
ipn-core = { path = "../ipn-core" }
ipn-ipc = { path = "../ipn-ipc", features = ["transport"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories.workspace = true
clap.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service.workspace = true
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Debug_Extensions",
    "Win32_System_Kernel",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

# macOS has no /proc; the memory watchdog reads RSS via getrusage(2).
# core-foundation-sys supplies the CFRunLoop the IOKit power notifications need.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
core-foundation-sys = "0.8"
