[package]
name = "ipn-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GTK4 desktop GUI for Nullgate (engine in-process)."

[[bin]]
name = "nullgate"
path = "src/main.rs"

[dependencies]
ipn-ipc = { path = "../ipn-ipc", features = ["transport"] }
gtk.workspace = true
adw.workspace = true
glib.workspace = true
qrcode.workspace = true
tokio.workspace = true
async-channel.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true

# System tray: tray-icon on Windows/macOS; ksni (StatusNotifier, no GTK3) on Linux.
[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
tray-icon = "0.24"

# flock(2) for the agent's and the GUI's single-instance locks — macOS has no D-Bus
# session bus, so GApplication's own uniqueness never engages there.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3.5"

# Embed the app icon into the Windows .exe (see build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7.2"
winreg = "0.56.0"
# ShellExecuteEx "runas" elevation for restarting the daemon (no PowerShell).
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
